third_party/move/move-compiler-v2/tests/folding/constants_simple.exp

Diagnostics:
error: invalid byte string
   ┌─ tests/folding/constants_simple.move:16:29
   │
16 │     const C12: vector<u8> = "<empty>";
   │                             ^ String literal must begin with b" (for a byte string) or h" (for a hex string)
